added data grid

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
   <div class="col" style="padding: 8px 8px !important">
     <nav class="navbar navbar-dark bg-primary ">
       <a href="/#/home" class="active">Home</a>
-      <a href="/#/home">About</a>
+      <a href="/#/admin">Admin</a>
       <a href="/#/home">Gallery</a>
       <a href="/#/home">Web Icons</a>
       <a href="/#/home">Short Codes</a>
