--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -11,3 +11,30 @@
                (btnclick)="gridaction($event)">
     </data-grid>
 </div>
+
+<div>
+  <ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Data Modal</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div class="row">
+        <div class="col">ID</div>
+        <div class="col">Name</div>
+        <div class="col">Email</div>
+        <div class="col">Mobile</div>
+        <div class="col">Comments</div>
+      </div>
+      <div class="row">
+        <div class="col">{{user.Id}}</div>
+        <div class="col">{{user.name}}</div>
+        <div class="col">{{user.email}}</div>
+        <div class="col">{{user.mobile}}</div>
+        <div class="col">{{user.comments}}</div>
+      </div>
+    </div>
+  </ng-template>
+</div>
