added filter config for data

--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -7,7 +7,7 @@
                [isshowfilter]=true
                [isExporttoCSV]=true
                [exportFileName]="exportFileName"
-               [filter] = userfilter
+               [filter] = usrFilterPipe
                (btnclick)="gridaction($event)">
     </data-grid>
 </div>
