--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,34 +1,58 @@
 <div class="homecontent">
 
-  <div class="w3_banner_info">
-    <div class="w3_banner_info_grid">
-      <h3 class="test">
-        <span>ATTRACTIVE HOME PURCHASE</span><br/>
-        <span>OFFERS</span>
-      </h3>
-      <p>We deal with different kinds of properties
-        <span>Start browsing now!</span>
-      </p>
+  <div class="w3_banner_info reset-margins row">
+    <div class="col">
+      <div class="w3_banner_info_grid reset-margins row">
+        <h3 class="test reset-margins row">
+          <span>ATTRACTIVE HOME PURCHASE</span>
+          <br/>
+          <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <span>OFFERS</span>
+        </h3>
+        <div class="row" style="padding: 0px 100px!important;">
+          <p class="col" style="padding: 0px 150px!important;">We deal with different kinds of properties
+            <span>Start browsing now!</span>
+          </p>
+        </div>
+      </div>
+      <div class="wthree_banner_grids reset-margins row">
+        <div class="col-xs-3  col-sm-3 wthree_banner_grid">
+          <i class="fa fa-key" aria-hidden="true"></i>
+          <h4>Rentals</h4>
+        </div>
+        <div class="col-xs-3  col-sm-3 wthree_banner_grid">
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <h4>Mortgage</h4>
+        </div>
+        <div class="col-xs-3  col-sm-3 wthree_banner_grid">
+          <i class="fa fa-building-o" aria-hidden="true"></i>
+          <h4>Office spaces</h4>
+        </div>
+        <div class="col-xs-3  col-sm-3 wthree_banner_grid">
+          <i class="fa fa-money" aria-hidden="true"></i>
+          <h4>Loans</h4>
+        </div>
+        <div class="clearfix"> </div>
+      </div>
     </div>
-    <div class="wthree_banner_grids">
-      <div class="col-xs-3 wthree_banner_grid">
-        <i class="fa fa-key" aria-hidden="true"></i>
-        <h4>Rentals</h4>
-      </div>
-      <div class="col-xs-3 wthree_banner_grid">
-        <i class="fa fa-clock-o" aria-hidden="true"></i>
-        <h4>Mortgage</h4>
-      </div>
-      <div class="col-xs-3 wthree_banner_grid">
-        <i class="fa fa-building-o" aria-hidden="true"></i>
-        <h4>Office spaces</h4>
-      </div>
-      <div class="col-xs-3 wthree_banner_grid">
-        <i class="fa fa-money" aria-hidden="true"></i>
-        <h4>Loans</h4>
-      </div>
-      <div class="clearfix"> </div>
+  </div>
+
+  <div class="row reset-margins">
+    <div class="col-xs-3 col-sm-3"></div>
+    <div class="col-xs-6 col-sm-6">
+      <carousel>
+        <slide>
+          <img class="fixedHeight" src="/assets/1.jpg" alt="First slide" style="display: block;">
+        </slide>
+        <slide>
+          <img class="fixedHeight" src="/assets/123.jpg" alt="Second slide" style="display: block;">
+        </slide>
+        <!-- <slide>
+        <img src="assets/images/nature/3.jpg" alt="Third slide" style="display: block; width: 100%;">
+      </slide> -->
+      </carousel>
     </div>
+    <div class="col-xs-3 col-sm-3"></div>
   </div>
 
 </div>
