--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,13 +3,17 @@
   <div class="w3_banner_info reset-margins row">
     <div class="col">
       <div class="w3_banner_info_grid reset-margins row">
-        <h3 class="test reset-margins row">
-          <span>ATTRACTIVE HOME PURCHASE</span>
-          <br/>
-          <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-          <span>OFFERS</span>
-        </h3>
-        <div class="row" style="padding: 0px 100px!important;">
+        <div class="center-header reset-margins row">
+          <div class="col">
+            <span class="row reset-margins">ATTRACTIVE HOME PURCHASE</span>
+            <div class="row reset-margins">
+              <span class="col-sm-4 col-xs-4"></span>
+              <span class="col-sm-4 col-xs-4">OFFERS</span>
+              <span class="col-sm-4 col-xs-4"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row reset-margins" style="padding: 0px 100px!important;">
           <p class="col" style="padding: 0px 150px!important;">We deal with different kinds of properties
             <span>Start browsing now!</span>
           </p>
