--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <div class="navtop row bg-primary">
-  <div class="navheader col">
+  <div class="navheader col-sm-5">
     <img src="">
   </div>
 
-  <div class="col" style="padding: 8px 8px !important">
+  <div class="col-sm-7" style="padding: 8px 8px !important;text-align: right;">
     <nav class="navbar navbar-dark bg-primary ">
       <a href="/#/home" class="active">Home</a>
       <a href="/#/admin">Admin</a>
