fixed css for main page

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -11,13 +11,14 @@
               <span class="col-sm-4 col-xs-4">OFFERS</span>
               <span class="col-sm-4 col-xs-4"></span>
             </div>
+            <div class="row reset-margins" style="padding: 0px 100px!important;font-size:1.3rem;">
+                <p class="col">We deal with different kinds of properties
+                  <span>Start browsing now!</span>
+                </p>
+              </div>
           </div>
         </div>
-        <div class="row reset-margins" style="padding: 0px 100px!important;">
-          <p class="col" style="padding: 0px 150px!important;">We deal with different kinds of properties
-            <span>Start browsing now!</span>
-          </p>
-        </div>
+        
       </div>
       <div class="wthree_banner_grids reset-margins row">
         <div class="col-xs-3  col-sm-3 wthree_banner_grid">
