--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -7,14 +7,14 @@
 
 .w3_banner_info {
     margin: 0px !important;
-    padding: 90px 60px;
+    /* padding: 90px 60px; */
     /* width: 80%; */
     text-align: center;
     color: #fff !important;
 }
 .w3_banner_info_grid{
     margin: 0px !important;
-    padding: 0px 80px !important; 
+    /* padding: 0px 80px !important;  */
 }
 
 .reset-margins{
@@ -37,6 +37,7 @@
     color: #fff;
     line-height: 1.3em;
     text-transform: uppercase;
+    padding: 0px 190px!important;
 }
 
 .fixedHeight{
